--- a/css/style.css
+++ b/css/style.css
@@ -7,20 +7,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
   
 /* -----Todas las Paginas----- */
-  body {
-    
-  }  
+
 
 /* Header */
   h1 {
     padding: 1em;
     margin-left: 10%;
-
+    
     font-family: "Roboto", sans-serif;
     font-weight: 800;
     font-size: 250%;
+    font-weight: 5px;
         
-    text-shadow: yellow 0px 0px 10px;
+    text-shadow: rgb(253, 253, 253) 0px 0px 10px;
   }
 
   .header {
@@ -28,6 +27,7 @@
      width:90%;
      background-color:  rgb(139, 80, 53);
      border: 3px solid black;
+     border-radius:10px;
 
      display:flex;
      flex-direction:row;
@@ -42,19 +42,21 @@
      font-weight: 600;
      font-size: 110%;
      color: black;
+     text-decoration:none;
      
      
   }
 
   .header .BotonesHeader {
    padding: 1em;
-   margin-right: 6%;
-   margin-left: 6%;
+   margin-right: 4%;
+   margin-left: 4%;
    display:flex;
    flex-direction:row;
    flex-wrap:wrap;
    justify-content: flex-start;
    align-items: center;
+   
       
   }
 /* Footer */
@@ -77,10 +79,13 @@
   padding: 3em;
   background-color:  rgb(139, 80, 53);
   border: 3px solid black;
-  text-align: center;
   margin-bottom: 7%;
   margin-left: 5%;
+  border-radius:10px;
+
+  text-align: center;
   font-family: "Roboto", sans-serif;
+  color:black;
   }
 
   h2 {
@@ -100,11 +105,14 @@
   border: 3px solid black;
   margin-bottom: 7%;
   margin-left: 5%;
+  border-radius:10px;
 
   font-family: "Roboto", sans-serif;
   font-weight:500;
   text-align: center;
+  color:black;
   }
+
   .LinkSection .LinkList {
   list-style-type:none;
   }
@@ -115,6 +123,9 @@
   }
 
 /* -----Media----- */
+  .MediaContainer {
+    border-radius:10px;
+  }
 
   .contenedor {
   max-width: 150em;
@@ -122,7 +133,7 @@
   padding:1em;
   margin-left: 2%;
   margin-bottom: 7%;
-
+  
   font-family: "Roboto", sans-serif;
   font-weight:500;
   text-align: center;
@@ -180,10 +191,7 @@
       padding: 3em;
       background-color:  rgb(139, 80, 53);
       border: 3px solid black;
-      text-align: center;
-      margin-bottom: 7%;
-      margin-left: 5%;
-      font-family: "Roboto", sans-serif;
+      border-radius:10px;
 
       display:grid;
       grid-template-rows: 150px ;
@@ -191,6 +199,11 @@
       grid-auto-rows: 150px;
       row-gap: 8px;
       column-gap: 8px;
+
+      text-align: center;
+      margin-bottom: 7%;
+      margin-left: 5%;
+      font-family: "Roboto", sans-serif;
       }
   
   .ImagenGuia {
@@ -212,17 +225,11 @@
       padding: 3em;
       background-color:  rgb(139, 80, 53);
       border: 3px solid black;
+      border-radius:10px;
+
       text-align: center;
       margin-bottom: 7%;
       margin-left: 5%;
       font-family: "Roboto", sans-serif;
 
   }
-
-  /* Pendientes a los que no llegué por falta de tiempo: 
-  - Agregarle el logo de la hermandad a la izquierda del título
-  - Agregar los iconos a cada seccion y a los links de los contactos
-  - Conseguir una forma menos cuadrada y estética en cada cuadro. 
-  Tuve toda la intención pero se me complicó, y de todas formas me pareció que no era el punto de esta entrega, ya que son todos cambios estéticos. Lo importante por ahora es que me corrijan el html a ver si voy bien encaminado!  
-  Desde ya, muchas gracias y que tenga una excelente semana!
-  */
