--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 
 /* Header */
   .TituloPrincipal {
-    display:inline-block;
     align-items: flex;
     float:left;
     margin-left: 10%;
@@ -148,73 +147,25 @@
 
 /* -----Media----- */
   .MediaContainer {
-    border-radius:10px;
+      width:90%;
+      padding: 3em;
+      background-color:  rgb(139, 80, 53);
+      border: 3px solid black;
+      border-radius:10px;
+
+      text-align: center;
+      font-family: "Roboto", sans-serif;
+        
+      display:flex;
+      flex-direction:row;
+      flex-wrap:wrap;
+      align-items: center;
+
+      margin-bottom: 7%;
+      margin-left: 5%;
   }
-
-  .contenedor {
-  max-width: 150em;
-  width:96%;
-  padding:1em;
-  margin-left: 2%;
-  margin-bottom: 7%;
-  
-  font-family: "Roboto", sans-serif;
-  font-weight:500;
-  text-align: center;
-  }
-
-  .contenedor .BotonesGuia {
-     width:100%;
-     display:flex;
-     flex-direction:row;
-     flex-wrap:wrap;
-     justify-content: flex-start;
-     align-items: center;
-     list-style-type: none;  
-  }
-
-    .MediaContainer .contenedor .BotonGuia{
-      background-color:  rgb(117, 117, 117);
-      padding: 1em;
-      margin-right: 1%;
-      border: 3px solid rgb(0, 0, 0);
-      }
-
-        .MediaContainer .contenedor .BotonesGuia li {
-        color:rgb(0, 0, 0);
-        }
-  
-        .MediaContainer .contenedor .BotonesGuia .BotonGuia:hover {
-        text-shadow: rgb(253, 253, 253) 0px 0px 10px;
-        }
-
-   .contenedor .BotonGuiaActivo{
-   background-color:rgb(139, 80, 53) ;
-   padding: 1em;
-   margin-right: 1%;
-   border: 3px solid black;
-   }
-
-   .subcontenedor{
-   background-color: rgb(139, 80, 53);
-   position: relative;
-   border: 3px solid black;  
-   }
-  
-     .bloque{
-     background-color: rgb(139, 80, 53);
-     padding:1em;
-     position: relative;
-     top:0;
-     opacity:0;
-     }
-
-       .bloqueActivo {
-       background-color: rgb(139, 80, 53);
-       padding:1em;
-       position: absolute;
-       top:0;
-       margin-top:1%;
+       .MediaContainer img {
+       padding: 1em;
        }
 
 /* -----Guias----- */
