--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,9 +26,11 @@
 
 body {
     header {
-            background-image: url(../img/Background\ -\ Header.jpg);
+            background-image: url(../img/Background-Header.jpg);
             background-repeat:no-repeat;
             background-size:cover;
+            padding-bottom: 4em;
+            border: 1px solid black;
             h1 {
             padding: 1em;
             margin-left: 10%;
@@ -43,19 +45,13 @@ body {
             }
             ul {
             @include container-style(90%, 600, 110%);
-            
-            background-color:  rgb(139, 80, 53);
-            border: 3px solid black;
-            border-radius:10px;
             margin-bottom:0;
-
             display:flex;
             flex-direction:row;
             flex-wrap:wrap;
             justify-content: flex-start;
             align-items: center;
             list-style-type: none;
-            
 
             li{
                 padding: 1em;
@@ -125,7 +121,6 @@ body {
             bottom: 0;
             background-color: rgb(63, 62, 62);
             width:100%;
-            border-bottom: 3px solid black;
 
             text-align: center;  
             font-size: 75%;
@@ -158,28 +153,24 @@ body {
 
         .PresentationBackground {
             @include page-background (url(../img/BackgroundSection\ -\ Karyon_FightingPose_JadeForest.jpg));
-
-
+            border: 1px solid black;
         }
              .Presentation {
              @include container-style (50%, 400,100);
              margin-left: 45%;
              padding: 2em;
              }
-        
         .IntroRaidingBackground {
             @include page-background (url(../img/BackgroundSection\ -\ Faddin_Incinerate_AhnKahet.jpg));
-           }
-            
-            
+            border: 1px solid black;
+        }
              .IntroRaiding {
              @include container-style (50%, 400,100);
              padding: 2em;
              }
-
         .IntroRoleplayBackground {
             @include page-background (url(../img/BackgroundSection\ -\ Reltor_SummonLightning_Dornogal.jpg));
-
+            border: 1px solid black;
         }
 
              .IntroRoleplay {
@@ -225,44 +216,50 @@ body {
 
 /* Media */
     .Media {
-            background-image: url(../img/Background-Media_3.jpg);
-            width:100%;
-            padding:5em;
-            background-repeat:no-repeat;
-            background-size:cover;
-            background-position:bottom;
+    background-image: url(../img/Background-Media.jpg);
+    width:100%;
+    padding:5em;
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:bottom;
         
     }
-    .MediaContainer {
-        padding: 0em;
-        margin-top:7%;
+         .MediaContainer {
+         padding: 0em;
         
-        
-        display:flex;
-        flex-direction:row;
-        flex-wrap:wrap;
-        align-items: center;
-    }
-    .MediaContainer img {
-        padding: 1em;
-    }
+         display:flex;
+         flex-direction:row;
+         flex-wrap:wrap;
+         align-items: center;
+         }
+         .MediaContainer img {
+         padding: 1em;
+         }
 
     @media (max-width: 1600px) {
-        .MediaContainer {
-        padding: 2em;
+        .MediaContainer img {
+        padding: 0.8em;
         }
     }
     
     @media (max-width: 900px) {
-        .MediaContainer {
-            padding: 1.2em;
+        .MediaContainer img {
+            padding: 0.5em;
         }
     }
 
     @media (max-width: 800px) {
+        .Media {
+        padding-top:5em;
+        padding-left:0em;
+        padding-right:0em;
+        }
        .MediaContainer {
-        padding: 1em;
-       }
+        margin-left:0;
+        margin-right:0;
+        padding:0;
+
+        }
        .MediaContainer img {
         padding: 0.1em;
        }
@@ -270,28 +267,28 @@ body {
 
 /* Guias */
     .Guias {
-            background-image: url(../img/Background-Guias.jpg);
-            width:100%;
-            padding:5em;
-            background-repeat:no-repeat;
-            background-size:cover;
-            background-position:bottom;
-            margin-left:0;
-            }
+    background-image: url(../img/Background-Guias.jpg);
+    width:100%;
+    padding:5em;
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:bottom;
+    margin-left:0;
+    }
 
     .ListaGuias {
-        padding: 3em;
-        min-width: 800px;
+         padding: 3em;
+         min-width: 800px;
 
-        display:grid;
-        grid-template-columns: 150px 9fr;
-        grid-auto-rows: 150px;
-        row-gap: 8px;
-        column-gap: 8px;
-        position:relative;
+         display:grid;
+         grid-template-columns: 150px 9fr;
+         grid-auto-rows: 150px;
+         row-gap: 8px;
+         column-gap: 8px;
+         position:relative;
 
-        text-align: center;
-    }
+         text-align: center;
+         }
 
          .ProfilePic {
          background-color: white;
@@ -313,23 +310,33 @@ body {
               list-style-type:none;
               font-size: 150%;
               font-weight: 10px;
-            }
+             }
             .GuideLink {
               list-style-type:none;
               font-size: 120%;
               font-weight: 10px;
-            }
+             }
             .GuideImg {
               list-style-type:none;
               border:2px solid black;
-            }
+             }
        
          .GuiaAutor {
          color:black;
          }
 
 /* Relatos */
-     .RelatosSection {
+    .Relatos {
+    background-image: url(../img/Background-Relatos_1.jpg);
+    width:100%;
+    padding:5em;
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:bottom;
+    margin-left:0;
+     }
+
+    .RelatosSection {
       padding: 3em;
       min-width: 800px;
 
@@ -367,8 +374,18 @@ body {
          font-size: 100%;
          color:rgb(0, 0, 0);  
          }
+    
 
 /* Portal */
+    .Portal {
+    background-image: url(../img/Background-Portal_1.jpg);
+    width:100%;
+    padding:5em;
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:bottom;
+    margin-left:0;
+     }
      .ContentSection {
       padding: 3em;
       text-align: center;
