--- a/styles/style.scss
+++ b/styles/style.scss
@@ -266,6 +266,19 @@ body {
     }
 
 /* Guias */
+@mixin item_guias ($font-size,$grid-row) {
+         background-color: rgb(216, 139, 104); 
+         border: 2px solid black;
+         grid-row: $grid-row;
+          
+         display:flex;
+         align-items: center;
+         justify-content: center;
+
+         font-size: $font-size;
+         color:black;  
+}
+
     .Guias {
     background-image: url(../img/Background-Guias.jpg);
     width:100%;
@@ -278,33 +291,41 @@ body {
 
     .ListaGuias {
          padding: 3em;
-         min-width: 800px;
-
          display:grid;
-         grid-template-columns: 150px 9fr;
+         grid-template-columns: 150px 1fr;
          grid-auto-rows: 150px;
          row-gap: 8px;
          column-gap: 8px;
          position:relative;
-
          text-align: center;
+        
          }
 
-         .ProfilePic {
+         /*  Fotos de Perfil - Guias*/
+
+         .ProfilePic_Karyon {
          background-color: white;
+         background-image: url(../img/ProfilePic-Karyon.png);
+         background-size: 146px 146px;
+         border: 2px solid black;
+         background-size:cover;
+         }
+         .ProfilePic_Celduin {
+         background-color: white;
+         background-image: url(../img/ProfilePic-Celduin.png);
+         background-size: 146px 146px;
          border: 2px solid black;
          }
-         .ItemGuia {
-         background-color: rgb(216, 139, 104); 
-         border: 2px solid black;
-         grid-row: span 2;
-          
-         display:flex;
-         align-items: center;
-         justify-content: center;
 
-         font-size: 100%;
-         color:rgb(0, 0, 0);      
+         .GuiaAutor {
+         color:black;
+         }
+
+         /* Contenido de Guias*/
+
+         .ItemGuia {
+            @include item_guias(100%,span 2);
+            ul {list-style:none;}
          }
             .GuideTitle {
               list-style-type:none;
@@ -316,14 +337,127 @@ body {
               font-size: 120%;
               font-weight: 10px;
              }
-            .GuideImg {
+             /* Imagenes de Guias */
+             @mixin img-guias ($background-image, $height,$width) {
               list-style-type:none;
               border:2px solid black;
+              background-image:$background-image;
+              height:$height;
+              width:$width;
+              background-size:cover;
+              align-items:center;
+              justify-self: center;
              }
+             .GuideImg-UndermineRaid {
+              @include img-guias (url(../img/Flyer_Undermine.png),150px,450px);
+              }
+             .GuideImg-TWWS02Overview {
+              @include img-guias (url(../img/Flyer-TheWarWithin.png),150px,450px)
+              }
+              .GuideImg-TWWS02BrewmasterGuide {
+              @include img-guias (url(../img/Flyer-Brewmaster.png),150px,450px);
+              }
+              .GuideImg-TWWS02ArmsGuide {
+              @include img-guias (url(../img/Flyer-ArmsWarrior.png),150px,450px)
+              }
+              .GuideImg-TWWS02PvPGuide {
+              @include img-guias (url(../img/Flyer-PvPGuide.png),150px,450px)
+              }
        
-         .GuiaAutor {
-         color:black;
+
+    @media (max-width:1100px) {
+    .Guias {
+    padding-left:0em;
+    padding-right:0em;
+    }
+    .ListaGuias {
+        padding:2em;
+        }
+        .ItemGuia {
+        padding: 1em;
          }
+    }
+
+    @media (max-width:800px){
+             .GuideImg-UndermineRaid {
+              @include img-guias (url(../img/Flyer_Undermine.png),150px,300px);
+              }
+             .GuideImg-TWWS02Overview {
+              @include img-guias (url(../img/Flyer-TheWarWithin.png),150px,300px)
+              }
+              .GuideImg-TWWS02BrewmasterGuide {
+              @include img-guias (url(../img/Flyer-Brewmaster.png),150px,300px);
+              }
+              .GuideImg-TWWS02ArmsGuide {
+              @include img-guias (url(../img/Flyer-ArmsWarrior.png),150px,300px)
+              }
+              .GuideImg-TWWS02PvPGuide {
+              @include img-guias (url(../img/Flyer-PvPGuide.png),150px,300px)
+              }
+    }
+
+    @media (max-width:680px){
+            .ListaGuias {
+                grid-auto-rows: 150px 280px 150px 150px;
+            }
+
+             .GuideImg-UndermineRaid {
+              @include img-guias (url(../img/Flyer_Undermine.png),150px,200px);
+              }
+             .GuideImg-TWWS02Overview {
+              @include img-guias (url(../img/Flyer-TheWarWithin.png),150px,200px)
+              }
+              .GuideImg-TWWS02BrewmasterGuide {
+              @include img-guias (url(../img/Flyer-Brewmaster.png),150px,200px);
+              }
+              .GuideImg-TWWS02ArmsGuide {
+              @include img-guias (url(../img/Flyer-ArmsWarrior.png),150px,200px)
+              }
+              .GuideImg-TWWS02PvPGuide {
+              @include img-guias (url(../img/Flyer-PvPGuide.png),150px, 200px)
+              }
+    }
+
+    @media (max-width:540px) {
+        .ListaGuias {
+            grid-template-columns: 1fr;
+        }
+        .ProfilePic_Karyon {
+         background-size:cover;
+         max-width:146px;
+         margin-left:30%;
+         }
+        .ProfilePic_Celduin {
+         background-size:cover;
+         max-width:146px;
+         margin-left:30%;
+         }
+    }
+    @media (max-width:400px) {
+        .ProfilePic_Karyon {
+            margin-left:15%;
+        }
+        .ProfilePic_Celduin {
+            margin-left:15%;
+        }
+ 
+             .GuideImg-UndermineRaid {
+              @include img-guias (url(../img/Flyer_Undermine.png),150px,150px);
+              }
+             .GuideImg-TWWS02Overview {
+              @include img-guias (url(../img/Flyer-TheWarWithin.png),150px,150px)
+              }
+              .GuideImg-TWWS02BrewmasterGuide {
+              @include img-guias (url(../img/Flyer-Brewmaster.png),150px,150px);
+              }
+              .GuideImg-TWWS02ArmsGuide {
+              @include img-guias (url(../img/Flyer-ArmsWarrior.png),150px,150px)
+              }
+              .GuideImg-TWWS02PvPGuide {
+              @include img-guias (url(../img/Flyer-PvPGuide.png),150px, 150px)
+              }       
+    }
+
 
 /* Relatos */
     .Relatos {
@@ -335,13 +469,13 @@ body {
     background-position:bottom;
     margin-left:0;
      }
-
+    
     .RelatosSection {
       padding: 3em;
-      min-width: 800px;
+    //   min-width: 800px;
 
       display:grid;
-      grid-template-columns: 150px 9fr;
+      grid-template-columns: 150px 1fr;
       grid-auto-rows: 150px;
       row-gap: 8px;
       column-gap: 8px;
@@ -374,6 +508,27 @@ body {
          font-size: 100%;
          color:rgb(0, 0, 0);  
          }
+    @media (max-width:800px) {
+      .Relatos {
+        padding-left:0em;
+        padding-right:0em;
+      }
+      
+      .RelatosSection {
+      padding-top: 3em;
+      padding-left:0.5em;
+      padding-right:0.5em;
+
+      display:grid;
+      grid-template-columns: 150px 1fr;
+      grid-auto-rows: 150px;
+      row-gap: 8px;
+      column-gap: 8px;
+      position:relative;
+
+      text-align: center;
+      }
+    }
     
 
 /* Portal */
@@ -397,5 +552,16 @@ body {
          border: 2px solid black;
          overflow:auto;
          }
+
+    @media (max-width:800px) {
+    .Portal {
+        padding-left:0em;
+        padding-right:0em;
+    }
+    .ContentSection {
+        padding: 1em;
+    }
+
+    }
 
 }
